--- a/client/package.json
+++ b/client/package.json
@@ -1,28 +1,25 @@
 {
-  "name": "client",
-  "version": "0.1.0",
+  "name": "dlr-client",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.13.2",
+    "axios": "^1.4.0",
     "jwt-decode": "^3.1.2",
-    "moment": "^2.30.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.30.2",
-    "react-scripts": "^0.0.0"
+    "react-router-dom": "^6.14.1"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.4",
+    "postcss": "^8.4.38",
+    "autoprefixer": "^10.4.19",
+    "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "set \"NODE_OPTIONS=--no-webstorage\" && set \"DISABLE_ESLINT_PLUGIN=true\" && react-scripts start",
-    "dev": "set \"NODE_OPTIONS=--no-webstorage\" && set \"DISABLE_ESLINT_PLUGIN=true\" && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "dev": "react-scripts start"
   },
   "browserslist": {
     "production": [
@@ -35,9 +32,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "cross-env": "^7.0.3",
-    "tailwindcss": "^3.3.1"
   }
 }
