--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
   "name": "digital-lab-server",
   "version": "1.0.0",
-  "description": "API Server for Digital Lab Record System",
-  "main": "index.js",
+  "description": "Backend for Digital Lab Record System",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "seed": "node utils/dummyData.js"
   },
+  "keywords": [
+    "express",
+    "mongodb",
+    "react"
+  ],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.0",
-    "dotenv": "^16.3.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "mongoose": "^8.4.1",
+    "nodemon": "^3.1.2"
   }
 }
