--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "seed": "node utils/dummyData.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -14,10 +15,10 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.0"
+    "mongoose": "^8.0.0",
+    "nodemon": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
 }
-
